--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -14,10 +14,10 @@
 
         <ImageView
             android:id="@+id/foto_conta"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_account_circle_black_24dp"
+            android:background="@drawable/ic_logo_visa"
             android:layout_marginRight="10dp"/>
 
         <RelativeLayout
