--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/lnLista"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="100dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
