--- a/app/src/main/res/menu/activity_lista_faturas_drawer.xml
+++ b/app/src/main/res/menu/activity_lista_faturas_drawer.xml
@@ -3,15 +3,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_minhaConta"
             android:icon="@drawable/ic_account_circle_black_24dp"
             android:title="@string/minha_conta" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_bloquear"
             android:icon="@drawable/ic_block_black_24dp"
             android:title="@string/bloquear" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_cartoes"
+            android:icon="@drawable/ic_credit_card_black_24dp"
+            android:title="@string/bloquear" />
+        <item
+            android:id="@+id/nav_sair"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="@string/sair" />
 
