--- a/app/src/main/res/menu/activity_lista_faturas_drawer.xml
+++ b/app/src/main/res/menu/activity_lista_faturas_drawer.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_cartoes"
             android:icon="@drawable/ic_credit_card_black_24dp"
-            android:title="@string/bloquear" />
+            android:title="@string/title_activity_cartoes" />
         <item
             android:id="@+id/nav_sair"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
