--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#00516e</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#009bcf</color>
     <color name="fundoCloubank">#009bcf</color>
     <color name="preto">#000000</color>
     <color name="cinza">#c1c1c1</color>
