--- a/app/src/main/res/layout/content_lista_faturas.xml
+++ b/app/src/main/res/layout/content_lista_faturas.xml
@@ -12,4 +12,9 @@
     tools:context="br.com.cloudbank.inacio.walter.cloudbank.ListaFaturas"
     tools:showIn="@layout/app_bar_lista_faturas">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvFaturas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
