--- a/app/src/main/res/layout/item_lista_fatura.xml
+++ b/app/src/main/res/layout/item_lista_fatura.xml
@@ -2,10 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_height="100dp">
 
     <RelativeLayout
@@ -13,21 +11,29 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
+        <View
+            android:id="@+id/topoLinha"
+            android:layout_width="1dp"
+            android:layout_height="30dp"
+            android:background="@color/preto"
+            android:layout_marginLeft="14dp" />
+
         <ImageView
             android:id="@+id/ivlinha_tempo"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_centerVertical="true"
             android:background="@drawable/ic_panorama_fish_eye_black_24dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:layout_below="@id/topoLinha"/>
 
         <View
-            android:id="@+id/vLinha_lista"
+            android:id="@+id/bottonLinha"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:background="@color/preto"
             android:layout_below="@id/ivlinha_tempo"
             android:layout_marginLeft="14dp" />
+
 
         <RelativeLayout
             android:layout_toRightOf="@id/ivlinha_tempo"
