--- a/app/src/main/res/layout/app_bar_lista_faturas.xml
+++ b/app/src/main/res/layout/app_bar_lista_faturas.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="br.com.cloudbank.inacio.walter.cloudbank.ListaFaturas">
+    tools:context=".Faturas">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
