--- a/app/src/main/res/layout/content_lista_faturas.xml
+++ b/app/src/main/res/layout/content_lista_faturas.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.cloudbank.inacio.walter.cloudbank.ListaFaturas"
+    tools:context=".Faturas"
     tools:showIn="@layout/app_bar_lista_faturas">
 
     <android.support.v7.widget.RecyclerView
