--- a/app/src/main/res/menu/activity_lista_faturas_drawer.xml
+++ b/app/src/main/res/menu/activity_lista_faturas_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_bloquear"
             android:icon="@drawable/ic_block_black_24dp"
-            android:title="@string/bloquear" />
+            android:title="@string/cancelar" />
         <item
             android:id="@+id/nav_cartoes"
             android:icon="@drawable/ic_credit_card_black_24dp"
