--- a/app/src/main/res/layout/content_cartoes.xml
+++ b/app/src/main/res/layout/content_cartoes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="br.com.cloudbank.inacio.walter.cloudbank.Cartoes"
+    tools:context="br.com.cloudbank.inacio.walter.cloudbank.Cartao"
     tools:showIn="@layout/activity_cartoes">
 
     <android.support.v7.widget.RecyclerView
