--- a/app/src/main/res/layout/content_detalhe_fatura.xml
+++ b/app/src/main/res/layout/content_detalhe_fatura.xml
@@ -49,7 +49,7 @@
 
 
     <Button
-        android:id="@+id/btnDeninciar"
+        android:id="@+id/btnDenunciar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="@string/btnDenincia"
