--- a/app/src/main/res/menu/activity_lista_faturas_drawer.xml
+++ b/app/src/main/res/menu/activity_lista_faturas_drawer.xml
@@ -3,6 +3,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_cartao"
+            android:icon="@drawable/ic_credit_card_black_24dp"
+            android:title="@string/tvCartao" />
+        <item
             android:id="@+id/nav_bloquear"
             android:icon="@drawable/ic_block_black_24dp"
             android:title="@string/cancelar" />
