--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -70,6 +70,7 @@
                 android:drawablePadding="10dp"
                 android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                 android:gravity="center_vertical"
+                android:inputType="textPassword"
                 android:background="@drawable/cor_campos"/>
 
         </LinearLayout>
